
[package]
name = "rust-9p"
version = "0.0.1"
authors = [ "afpacket <afpacket@gmail.com>" ]

[lib]
name = "rs9p"
crate-type = ["rlib"]

[dependencies]
libc = "*"
time = "*"
log = "*"
num = "*"
nix = "*"
byteorder = "*"
bitflags = "*"
enum_primitive = "*"
net2 = { version = "*", features = ["nightly"] }

[dependencies.comm]
git = "https://github.com/mahkoh/comm"
