
[package]
name = "unpfs"
version = "0.0.1"
authors = [ "afpacket <afpacket@gmail.com>" ]
edition = "2018"

[[bin]]
name = "unpfs"

[dependencies]
nix = "0.13"
env_logger = "0.6"
filetime = "0.2"

[dependencies.rust-9p]
path = "../../"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = false
debug-assertions = false
