
[package]
name = "unpfs"
version = "0.0.1"
authors = [ "afpacket <afpacket@gmail.com>" ]
edition = "2018"

[[bin]]
name = "unpfs"

[dependencies]
nix = "0.18"
env_logger = "0.7"
filetime = "0.2"
tokio = { version = "0.2.21", features = ["full"] }
async-trait = "0.1.33"
futures = "0.3.5"

[dependencies.rust-9p]
path = "../../"

[profile.release]
opt-level = 3
lto = true
