
[package]
name = "unpfs_mt"
version = "0.0.1"
authors = [ "afpacket <afpacket@gmail.com>" ]

[[bin]]
name = "unpfs"

[dependencies]
nix = "*"
libc = "*"
env_logger = "*"

[dependencies.rust-9p]
path = "../../"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
